Fix content overflow on header

--- a/frontend/src/stylesheets/base/app_base_style.scss
+++ b/frontend/src/stylesheets/base/app_base_style.scss
@@ -1,10 +1,13 @@
 .app {
   height: 100vh;
+  width: auto;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
   background-color: $tan;
+  // overflow-x: scroll;
+  // overflow-y: scroll;
 }
 
 .header {
@@ -14,8 +17,9 @@
   background-color: $blue;
   width: 100%;
   min-height: 95px;
-  // height: 12%;
   letter-spacing: .23em;
+  margin-bottom: 2px;
+  overflow-x: scroll;
 }
 
 .header-logo {
