--- a/frontend/src/stylesheets/components/session/_dashboard.scss
+++ b/frontend/src/stylesheets/components/session/_dashboard.scss
@@ -1,6 +1,9 @@
 .dashboard-layout {
-    width: 100%;
-    height: 100%;
+  position: fixed;  
+  width: 100%;
+  // height: 100%;
+  height: 815px;
+  margin-top: 7%;
 }
 
 .card-styling {
@@ -10,7 +13,7 @@
 }
  
 .card {
-  height: 70%;
+  height: 669px;
   width: 55%;
   border-radius: 25px;
   border: 20px solid rgba(255, 255, 255, 0.943); 
@@ -18,7 +21,7 @@
 }
 
 .scroll-container {
-  overflow: hidden;
+  overflow-x: hidden;
   overflow-y: scroll;
   display: flex;
   flex-direction: column;
@@ -29,30 +32,30 @@
 
 .one {
   position: absolute;
-  background-color: $red;
+  transform: rotate(-9deg);
   left: 11%;
-  top: 19%;
-  transform: rotate(-9deg)
+  top: 14%;
+  background-color: $red;
 }
 
 .two {
+  position: absolute;
     z-index: 1;
-    position: absolute;
-    background-color: $green;
-    top: 13%;
+    transform: rotate(10deg);
+    top: 10%;
     left: 20%;
-    transform: rotate(10deg)
+    background-color: $green;
 }
 
 .three { 
+  position: absolute;
+  z-index: 2;
   display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  z-index: 2;
-  position: absolute;
-  background-color: $blue;
-  top: 16%;
+  top: 11%;
   left: 33%;
   width: 60%;
+  background-color: $blue;
 }
